--- a/2017-html-css/views/index.html
+++ b/2017-html-css/views/index.html
@@ -31,30 +31,43 @@
           <p>
             At Seven Senses we believe that you are your greatest creation. Every moment is an opportunity  <br>
             At Seven Senses we believe that you are your greatest creation. Every moment is an opportunity to grow, heal, and <br>
+            At Seven Senses we believe that you are your greatest creation. Every moment is an opportunity to grow, heal, and <br>
             At Seven Senses we believe that you are your greatest creation. Every moment is an opportunity  <br>
           </p>
+
+          <div id="left-button"> white-color </div>
+          <div id="left-button"> block-color </div>
 
         </div>
 
         <div id="content2">
           <article class="">
+
             <section>
-              <p>aaa</p>
+              <img src="" height="100px">
+              <h3>THE WORK</h3>
+              <p>The healing journey is a universal human experience and a life-long process. At Seven Senses we are committed to making that process meaningful and empowering for all</p>
             </section>
 
             <section>
-              <p>aaa</p>
+              <img src="" height="100px">
+              <h3>THE WORK</h3>
+              <p>The healing journey is a universal human experience and a life-long process. At Seven Senses we are committed to making that process meaningful and empowering for all</p>
             </section>
 
             <section>
-              <p>aaa</p>
+              <img src="" height="100px">
+              <h3>THE WORK</h3>
+              <p>The healing journey is a universal human experience and a life-long process. At Seven Senses we are committed to making that process meaningful and empowering for all</p>
             </section>
+
+
           </article>
 
         </div>
 
         <div id="footer">
-          
+
         </div>
 
 
