--- a/2017-html-css/assets/stylesheets/style.css
+++ b/2017-html-css/assets/stylesheets/style.css
@@ -12,18 +12,18 @@ body {
 }
 
 #header {
-  margin-top: auto;
+  position: relative;
   width: 100%;
   height: 600px;
   background: url("chura.jpg");
 }
 
 #menu1{
-position: absolute;
-right: 50px;
-width: 670px;
-height: 100px;
-background: red;
+  position: absolute;
+  right: 50px;
+  width: 670px;
+  height: 100px;
+  background: red;
 }
 
 
@@ -35,14 +35,6 @@ background: red;
   display: inline-block;
   line-height: 36px;
   margin: 0 0 0 0;
-}
-
-#screen {
-  position: absolute;
-  top: 100px;
-  width: 100%;
-  height: 500px;
-  background-color: pink;
 }
 
 
@@ -59,31 +51,56 @@ background: red;
   border: 1px solid #ccc;
 }
 
-
+#screen {
+  position: absolute;
+  top: 100px;
+  width: 100%;
+  height: 520px;
+  background-color: pink;
+}
 
 /* content1 */
 
 #content1 {
-  margin-top: 0;
+  position: relative;
   width: 100%;
-  height: 300px;
+  height: 400px;
   background-color: orange;
+  text-align: center;
 }
 
 #content1 h1 {
+  padding-top: 30px;
   text-align: center;
   color: aqua;
 }
 
 #content1 p {
+  padding-top: 10px;
   text-align: center;
   color: aqua;
+}
+
+#content1 div {
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  width: 200px;
+  height: 50px;
+  display: inline-block;
+  text-align: center;
+  background-color: green;
+}
+
+#content1 div:hover {
+  opacity: 0.5;
+  background-color: green;
 }
 
 #content2 {
   position:relative;
   width: 100%;
-  height: 500px;
+  height: 600px;
   background-color: yellow;
   text-align: center;
 }
@@ -97,26 +114,54 @@ background: red;
   margin: auto;
 
   width: 80%;
-  height: 400px;
+  height: 500px;
 
   display: block;
   background-color: red;
 }
 
 #content2 article section {
-  margin-top: 50px;
+  position: relative;
+  margin-top: 0px;
   display: inline-block;
   vertical-align: middle;
-  width: 30%;
-  height: 300px;
+  width: 300px;
+  height: 500px;
   background-color: violet;
 }
 
-#content2 article section:first-child	 {
-  margin-left: 2%;
+#content2 article section img {
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  width: 300px;
+  height: 250px;
+  background-color: green;
 }
+
+#content2 article section h3 {
+  position: absolute;
+  top: 250px;
+  width: 100%;
+  height: 30px;
+  background-color: pink;
+}
+
+#content2 article section p {
+  position: absolute;
+  top: 290px;
+  left: 5%;
+  height: 150px;
+  width: 90%;
+  background-color: blue;
+}
+
+#content2 article section:first-child	 {
+  margin-right: 10px;
+}
+s
 #content2 article section:last-child	 {
-    margin-right: 2%;
+  margin-left: 10px;
 }
 
 
