--- a/2017-html-css/assets/stylesheets/style.css
+++ b/2017-html-css/assets/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0px;
   padding: 0px;
   text-align: center;
+  background-color: green;
 }
 
 #wrapper {
@@ -11,14 +12,34 @@ body {
   width: 100%;
 }
 
+/* header */
 #header {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: 750px;
   background: url("chura.jpg");
 }
 
-#menu1{
+#header #logo {
+  position: absolute;
+  left: 50px;
+  padding: 10px;
+  height: 100px;
+  width: 400px;
+  background-color: aqua;
+  vertical-align: middle;
+}
+
+#header #logo p {
+  margin-top: 0px;
+  height: 80px;
+  width:400px;
+  background-color: violet;
+  line-height: 80px;
+}
+
+
+#header #menu1 {
   position: absolute;
   right: 50px;
   width: 670px;
@@ -27,19 +48,17 @@ body {
 }
 
 
-#menu1 ul a:hover {
+#header #menu1 ul a:hover {
     color: gold;
 }
 
-#menu1 ul li {
+#header #menu1 ul li {
   display: inline-block;
   line-height: 36px;
   margin: 0 0 0 0;
 }
 
-
-
-#menu1 ul li a {
+#header #menu1 ul li a {
   font-size: 16px;
   display: block;
   text-decoration: none;
@@ -51,12 +70,12 @@ body {
   border: 1px solid #ccc;
 }
 
-#screen {
+#header #screen {
   position: absolute;
   top: 100px;
   width: 100%;
-  height: 520px;
-  background-color: pink;
+  height: 671px;
+  background-color: gold;
 }
 
 /* content1 */
