--- a/2017-html-css/views/index.html
+++ b/2017-html-css/views/index.html
@@ -10,9 +10,12 @@
     <div id="wrapper">
 
         <div id="header">
+          <div id="logo">
+            <p>最終課題</p>
+          </div>
           <div id="menu1">
             <ul>
-              <li><a href="page1.html">MAIN</a></li>
+              <li><a href="page1.html">main</a></li>
               <li><a href="page2.html">page2</a></li>
               <li><a href="page3.html">page3</a></li>
               <li><a href="page4.html">page4</a></li>
