--- a/2017-html-css/assets/stylesheets/style.css
+++ b/2017-html-css/assets/stylesheets/style.css
@@ -2,7 +2,6 @@ body {
   margin: 0px;
   padding: 0px;
   text-align: center;
-  background-color: green;
 }
 
 #wrapper {
@@ -26,7 +25,6 @@ body {
   padding: 10px;
   height: 100px;
   width: 400px;
-  background-color: aqua;
   vertical-align: middle;
 }
 
@@ -34,7 +32,6 @@ body {
   margin-top: 0px;
   height: 80px;
   width:400px;
-  background-color: violet;
   line-height: 80px;
 }
 
@@ -44,7 +41,6 @@ body {
   right: 50px;
   width: 670px;
   height: 100px;
-  background: red;
 }
 
 
@@ -63,11 +59,11 @@ body {
   display: block;
   text-decoration: none;
   text-transform: lowercase;
+  margin-top: 13px;
   padding: 0 8px;
-  color: #eee;
+  color: #deb887;
   width: 100px;
   height: 40px;
-  border: 1px solid #ccc;
 }
 
 #header #screen {
@@ -75,7 +71,7 @@ body {
   top: 100px;
   width: 100%;
   height: 671px;
-  background-color: gold;
+  background: linear-gradient(paleturquoise, lightyellow);
 }
 
 /* content1 */
@@ -84,20 +80,19 @@ body {
   position: relative;
   width: 100%;
   height: 400px;
-  background-color: orange;
   text-align: center;
 }
 
 #content1 h1 {
   padding-top: 30px;
   text-align: center;
-  color: aqua;
+  color: #577f7a;
 }
 
 #content1 p {
   padding-top: 10px;
   text-align: center;
-  color: aqua;
+  color: #778899;
 }
 
 #content1 div {
@@ -108,19 +103,17 @@ body {
   height: 50px;
   display: inline-block;
   text-align: center;
-  background-color: green;
+  background-color: #af8f5d;
 }
 
 #content1 div:hover {
   opacity: 0.5;
-  background-color: green;
 }
 
 #content2 {
   position:relative;
   width: 100%;
   height: 600px;
-  background-color: yellow;
   text-align: center;
 }
 
@@ -136,7 +129,6 @@ body {
   height: 500px;
 
   display: block;
-  background-color: red;
 }
 
 #content2 article section {
@@ -146,7 +138,6 @@ body {
   vertical-align: middle;
   width: 300px;
   height: 500px;
-  background-color: violet;
 }
 
 #content2 article section img {
@@ -155,7 +146,7 @@ body {
   left: 0px;
   width: 300px;
   height: 250px;
-  background-color: green;
+  background-color: paleturquoise;
 }
 
 #content2 article section h3 {
@@ -163,7 +154,7 @@ body {
   top: 250px;
   width: 100%;
   height: 30px;
-  background-color: pink;
+  color: #deb887;
 }
 
 #content2 article section p {
@@ -172,7 +163,7 @@ body {
   left: 5%;
   height: 150px;
   width: 90%;
-  background-color: blue;
+  color: #778899;
 }
 
 #content2 article section:first-child	 {
@@ -190,5 +181,5 @@ s
 #footer {
   width: 100%;
   height: 300px;
-  background-color: orange;
+  background-color: gainsboro;
 }
