--- a/2017-html-css/views/index.html
+++ b/2017-html-css/views/index.html
@@ -15,11 +15,11 @@
           </div>
           <div id="menu1">
             <ul>
+              <li><a href="index.html">main</a></li>
               <li><a href="page1.html">page1</a></li>
               <li><a href="page2.html">page2</a></li>
               <li><a href="page3.html">page3</a></li>
               <li><a href="page4.html">page4</a></li>
-              <li><a href="page5.html">page5</a></li>
             </ul>
           </div>
 
