--- a/2017-html-css/views/index.html
+++ b/2017-html-css/views/index.html
@@ -47,13 +47,13 @@
           <article class="">
 
             <section>
-              <img src="" height="100px">
+              <img src="../assets/images/chura.png" height="100px">
               <h3>THE WORK</h3>
               <p>The healing journey is a universal human experience and a life-long process. At Seven Senses we are committed to making that process meaningful and empowering for all</p>
             </section>
 
             <section>
-              <img src="" height="100px">
+              <img src="../assets/images/chura.png" height="100px">
               <h3>THE WORK</h3>
               <p>The healing journey is a universal human experience and a life-long process. At Seven Senses we are committed to making that process meaningful and empowering for all</p>
             </section>
@@ -73,8 +73,7 @@
 
         </div>
 
-
-
     </div>
+    <script type="text/javascript" src="../assets/javascript/index.js"></script>
   </body>
 </html>
