--- a/2017-html-css/views/index.html
+++ b/2017-html-css/views/index.html
@@ -11,7 +11,7 @@
 
         <div id="header">
           <div id="logo">
-            <p>最終課題</p>
+            <p>2017年度秋学期 情報フルエンシー</p>
           </div>
           <div id="menu1">
             <ul>
@@ -24,7 +24,8 @@
           </div>
 
           <div id="screen">
-
+                <h1>最終課題<br>
+                </h1>
           </div>
         </div>
 
@@ -59,7 +60,7 @@
             </section>
 
             <section>
-              <img src="" height="100px">
+              <img src="../assets/images/chura.png" height="100px">
               <h3>THE WORK</h3>
               <p>The healing journey is a universal human experience and a life-long process. At Seven Senses we are committed to making that process meaningful and empowering for all</p>
             </section>
