--- a/2017-html-css/assets/stylesheets/style.css
+++ b/2017-html-css/assets/stylesheets/style.css
@@ -31,8 +31,10 @@ body {
 #header #logo p {
   margin-top: 0px;
   height: 80px;
-  width:400px;
+  width:440px;
   line-height: 80px;
+  color: #deb887;
+  font-size: 26px;
 }
 
 
@@ -72,6 +74,22 @@ body {
   width: 100%;
   height: 671px;
   background: linear-gradient(paleturquoise, lightyellow);
+  /* text-align: center; */
+}
+
+@keyframes popDown {
+  from {
+    transform: translate(0px, -24px);
+    opacity: 0 }
+  to {
+    transform: translate(0, 0);
+    opacity: 1; } }
+
+#header #screen h1 {
+  color: white;
+  /* margin-top: 200px; */
+  margin-left: 50px;
+  animation: popDown 1.5s ease forwards;
 }
 
 /* content1 */
